fix: broken styles in navigation component

--- a/myreader-frontend/src/app/js/App.css
+++ b/myreader-frontend/src/app/js/App.css
@@ -66,10 +66,6 @@ input {
   flex-direction: column;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .no-underline {
   text-decoration: none;
 }
