--- a/myreader-frontend/src/app/js/components/Navigation/Navigation.css
+++ b/myreader-frontend/src/app/js/components/Navigation/Navigation.css
@@ -1,50 +1,78 @@
 .my-navigation {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
 }
 
 .my-navigation > li {
-    border-top: 1px solid rgba(0, 0, 0, 0.12);
-    margin: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  margin: 0;
 }
 
 .my-navigation__item {
-    cursor: pointer;
-    display: flex;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 40px;
-    max-height: 40px;
-    overflow: hidden;
-    text-align: left;
-    text-decoration: none;
-    white-space: normal;
-    width: 100%;
-    letter-spacing: 0.01em;
-    margin: 0;
-    user-select: none;
-    text-transform: uppercase;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  color: rgba(0, 0, 0, 0.87);
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 40px;
+  max-height: 40px;
+  overflow: hidden;
+  text-align: left;
+  text-decoration: none;
+  white-space: normal;
+  letter-spacing: 0.01em;
+  margin: 0;
+  user-select: none;
+  text-transform: uppercase;
 }
 
 .my-navigation__item:hover {
-    background-color: rgba(158, 158, 158, 0.2);
+  background-color: rgba(158, 158, 158, 0.2);
+}
+
+.my-navigation__item--selected {
+  background-color: #e5e5e5;
 }
 
 .my-navigation__item--blue {
-    background-color: rgb(63, 81, 181);
-    color: rgb(255, 255, 255);
+  background-color: rgb(63, 81, 181);
+  color: rgb(255, 255, 255);
 }
 
 .my-navigation__item--blue:hover {
-    background-color: rgba(63, 81, 181, 0.7);
+  background-color: rgba(63, 81, 181, 0.7);
 }
 
 .my-navigation__item--red {
-    background-color: rgb(255, 87, 34);
-    color: rgb(255, 255, 255);
+  background-color: rgb(255, 87, 34);
+  color: rgb(255, 255, 255);
 }
 
 .my-navigation__item--red:hover {
-    background-color: rgba(255, 87, 34, 0.7);
+  background-color: rgba(255, 87, 34, 0.7);
+}
+
+.my-navigation__item > a {
+  display: flex;
+  color: inherit;
+  text-decoration: none;
+}
+
+.my-navigation__item > a > span {
+  flex-grow: 1;
+  padding: 0 6px;
+}
+
+.my-navigation__item ~ ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.my-navigation__item ~ ul > .my-navigation__item {
+  border-color: transparent;
+  padding-left: 6px;
+  text-transform: none;
 }
